--- a/index.html
+++ b/index.html
@@ -613,11 +613,11 @@ var x = setInterval(function() {
 </body>
  
 <center>
- <a class="footerbtn" href="whatsapp://send?text=*No one would have sent such a message to me before, by clicking below to see what is for you* 👉 https://hatuute.blogspot.com/" data-action="share/whatsapp/share">
+ <a class="footerbtn" href="whatsapp://send?text=*No one would have sent such a message to me before, by clicking below to see what is for you* 👉 https://dibyenducode.github.io/Christmas/" data-action="share/whatsapp/share">
  <img width="22px" height="22px" src="https://bit.ly/2VLMnaW"/>  
  <b style="font-size: 26px;">Share</b>  
 </a>
- <a class="footerbtn1" href="https://www.facebook.com/sharer/sharer.php?u= https://hatuute.blogspot.com/" target="_blank" title="Share this post on Facebook" class="facebook">
+ <a class="footerbtn1" href="https://www.facebook.com/sharer/sharer.php?u= https://dibyenducode.github.io/Christmas/" target="_blank" title="Share this post on Facebook" class="facebook">
 	<img width="22px" height="22px" src="http://icons.iconarchive.com/icons/paomedia/small-n-flat/1024/social-facebook-icon.png"/>  
  <b style="font-size: 26px;">Share</b>  
  </a>
