--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="google" value="notranslate">
     <meta property="og:type" content="Make your own wonderful wish for you loved once" />
     <meta property="og:title" content="Sent Merry Christmas Wishes" />
-    <meta property="og:url" content="https://wish2happy.tk>
+    <meta property="og:url" content="https://dibyenducode.github.io/Christmas/>
     <meta property="og:description content="CLICK HERE"/>
     <meta property="og:site_name" content="Merry Christmas Wishes" />
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
